Reenable TargetDomainDisposeContextFailsIfInUse

The flakiness seems to be caused by a missing lock.

Bug: 774443
Change-Id: Ie6227e5f10225569f9a0017f354f4d05c67a5f0e
Reviewed-on: https://chromium-review.googlesource.com/721080
Reviewed-by: Alexander Timin <altimin@chromium.org>
Commit-Queue: Alex Clarke <alexclarke@chromium.org>
Cr-Commit-Position: refs/heads/master@{#509041}
Former-commit-id: 7a9777223774930b2cb8158dc669051298ea277e